--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Tanuj-code.github.io/Themer-React-Text-Editor",
+  "homepage": "https://Tanuj-code.github.io/Themer-React-Editor",
   "name": "h-app",
   "version": "0.1.0",
   "private": true,
